Modularize
Modularize, Use JDK 9, some changes on deprecated codes.