@@ -1,11 +1,21 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
+>
+
     <modelVersion>4.0.0</modelVersion>
+
     <parent>
-        <groupId>com.googlecode.soundlibs</groupId>
-        <artifactId>soundlibs</artifactId>
+        <groupId>ink.meodinger.soundlibs</groupId>
+        <artifactId>soundlibs-module</artifactId>
         <version>1-SNAPSHOT</version>
     </parent>
+
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    </properties>
+
     <artifactId>tritonus-all</artifactId>
     <packaging>bundle</packaging>
     <version>0.3.7-SNAPSHOT</version>
@@ -26,14 +36,21 @@
             <roles>
                 <role>Packager</role>
             </roles>
-       </developer>         
+        </developer>
+        <developer>
+            <name>Meodinger Wang</name>
+            <email>me@meodinger.ink</email>
+            <roles>
+                <role>Packager</role>
+            </roles>
+        </developer>
     </developers>
     
     <dependencies>
         <dependency>
-            <groupId>com.googlecode.soundlibs</groupId>
+            <groupId>ink.meodinger.soundlibs</groupId>
             <artifactId>jorbis</artifactId>
-            <version>0.0.17-2</version>
+            <version>0.0.17-SNAPSHOT</version>
         </dependency>
     </dependencies>
       
@@ -46,33 +63,52 @@
         <sourceDirectory>../tritonus-cvs/src/classes</sourceDirectory>
         <plugins>
             <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.8.1</version>
                 <configuration>
+                    <compilerArgs>
+                        <arg>--add-exports</arg>
+                        <arg>java.base/jdk.internal.perf=soundlibs.tritonus.all</arg>
+                    </compilerArgs>
                     <excludes>
                         <!-- these fail to compile, due to requirement for AspectJ or similar things -->
                         <exclude>org/tritonus/debug/AJ*.java</exclude>
                         <exclude>org/tritonus/saol/**</exclude>
                         <exclude>org/tritonus/debug/Utils.java</exclude>
+                        <!-- exclude package.html in sampled.vorbis -->
+                        <exclude>org/tritonus/sampled/convert/package.html</exclude>
                     </excludes>
                 </configuration>
             </plugin>
             <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-source-plugin</artifactId>
+                <version>3.2.1</version>
                 <configuration>
                     <excludes>
                         <exclude>org/tritonus/debug/AJ*.java</exclude>
                         <exclude>org/tritonus/saol/**</exclude>
                         <exclude>org/tritonus/debug/Utils.java</exclude>
+                        <exclude>org/tritonus/sampled/convert/package.html</exclude>
                     </excludes>
                 </configuration>
             </plugin>
             <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-javadoc-plugin</artifactId>
+                <version>3.3.1</version>
                 <configuration>
                     <!-- Javadoc fail to execute on Java 8 due to many erros -->
                     <skip>true</skip>
                 </configuration>
             </plugin>
+            <plugin>
+                <groupId>org.apache.felix</groupId>
+                <artifactId>maven-bundle-plugin</artifactId>
+                <version>5.1.2</version>
+            </plugin>
         </plugins>
     </build>
+
 </project>
